# lsp-cli

./: .gitignore  README.md  pyproject.toml
lsp_cli/: __init__.py  cli.py  client.py  daemon.py  daemon_main.py  daemon_state.py  file_watcher.py  locate.py  observability.py  protocol.py  session.py
tests/: test_daemon_helpers.py
